QQ-612 -fixed ie11 checkbox alignment issue.

--- a/source/styles/_deal-detail-edit.scss
+++ b/source/styles/_deal-detail-edit.scss
@@ -20,7 +20,7 @@
     box-sizing: border-box;
   }
   input[type=checkbox] {
-    width: initial;
+    width: auto;
   }
   label[for=sync-now] {
     color: $salesforce;
